--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "overdose/preview-email",
   "require": {
-    "php": "~7.0.0|~7.2.0"
+    "php": "~7.2.0"
   },
   "type": "magento2-module",
   "version": "1.0.0",
