--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "overdose/preview-email",
+    "name": "overdose/module-preview-email",
     "description" : "Overdose Preview Email",
     "require": {
-        "php": "~5.5.0|~5.6.0|^7.0.0|>=7.0.0|~7.2.0"
+        "php": "^5.0|>=7.0"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "autoload": {
         "files": [
             "registration.php"
